// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addIntoWatch no signed order fillable 1`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch no signed order fillable 2`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`addIntoWatch no signed order fillable 3`] = `
Object {
  "orderHash": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`addIntoWatch with signed order fillable 1`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch with signed order fillable 2`] = `
Object {
  "orderHash": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`addIntoWatch with signed order non fillable 1`] = `
Array [
  Array [
    Object {
      "balance": 0,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "update",
    },
  ],
]
`;

exports[`addIntoWatch with signed order non fillable 2`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch with signed order non fillable 3`] = `
Object {
  "orderHash": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`handle orderUpdate add 1`] = `
Array [
  Array [
    "0xOrderHash",
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`handle orderUpdate terminate 1`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerFeeAllowance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerFeeAllowance 2`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerFeeBalance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerFeeBalance 2`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerAllowance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerAllowance 2`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerBalance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerBalance 2`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerFeeAllowance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerFeeAllowance 2`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerFeeBalance 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientTakerFeeBalance 2`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderCancelled 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderCancelled 2`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "terminate",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillExpired 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillExpired 2`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "terminate",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillRoundingError 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillRoundingError 2`] = `
Array [
  Array [
    Object {
      "balance": 0,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "fill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderRemainingFillAmountZero 1`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderRemainingFillAmountZero 2`] = `
Array [
  Array [
    Object {
      "balance": 0,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "fill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderRemainingFillAmountZero 3`] = `Array []`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderRemainingFillAmountZero 4`] = `
Array [
  Array [
    Object {
      "balance": 0,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "fill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid default 1`] = `Array []`;

exports[`remove from watch, exisitng order 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`updateOrder isValid no userOrder 1`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "method",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "status",
    },
  ],
]
`;

exports[`updateOrder isValid no userOrder 2`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`updateOrder isValid userOrder 1`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "method",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "status",
    },
  ],
]
`;
